--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ compiler:
 script:
   - sudo apt-get install build-essential
   - cd "$TRAVIS_BUILD_DIR"
-  - sh do
+  - sudo sh do
 
 install: skip
